# demeter

./: .env.test  .flake8  .gitignore  README.md  docs.md  pyproject.toml  requirements.dev.txt
.github/workflows/: main.yml
demeter/: __init__.py  api.py  utils.py
demeter/raster/: __init__.py  polaris.py
demeter/raster/sentinel2/: __init__.py  ndvi.py
demeter/raster/sentinel2/utils/: download.py  rasters.py  tiles.py
demeter/raster/usgs/: __init__.py  constants.py  hydrography.py  topography.py  utils.py
demeter/raster/utils/: mask.py  merge.py  reprojection.py  transform.py
demeter/vector/usda/: ssurgo.py
tests/: conftest.py  test_api.py  test_utils.py
tests/fixtures/: central_valley.geojson  nebraska.geojson  points.geojson
tests/fixtures/recorded_responses/: 2024_09_point_data.yaml  tests.raster.sentinel2.test_ndvi.test_detector_footprint_mask.yaml  tests.raster.sentinel2.test_ndvi.test_fetch_and_build_ndvi_rasters.yaml  tests.raster.usgs.test_hydrography.test_find_hu4_codes.yaml  tests.test_api.test_fetch_point_data.yaml  tests.vector.usda.test_ssurgo.test_fetch_primary_soil_components.yaml
tests/raster/: test_polaris.py  test_raster.py
tests/raster/fixtures/polaris/: README.md
tests/raster/fixtures/polaris/point_data/: README.md
tests/raster/fixtures/polaris/point_data/bd/mean/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/mean/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/mean/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p5/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p5/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p5/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p95/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p95/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/bd/p95/5_15/: lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/mean/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/mean/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/mean/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p5/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p5/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p5/5_15/: lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p95/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p95/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/point_data/om/p95/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/sparse/: README.md
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/mean/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/mean/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/mean/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p5/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p5/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p5/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p95/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p95/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/bd/p95/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/mean/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/mean/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/mean/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p5/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p5/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p5/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p95/0_5/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p95/15_30/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/polaris/tests.test_api.test_fetch_point_data/om/p95/5_15/: lat3637_lon-102-101.tif  lat3637_lon-103-102.tif
tests/raster/fixtures/sentinel2/eodata/Sentinel-2/MSI/L2A/2024/09/06/S2A_MSIL2A_20240906T172901_N0511_R055_T13SGA_20240907T001649.SAFE/: manifest.safe
tests/raster/sentinel2/: conftest.py  test_ndvi.py
tests/raster/sentinel2/utils/: test_rasters.py
tests/raster/usgs/: test_hydrography.py  test_topography.py
tests/raster/utils/: test_mask.py  test_merge.py  test_reprojection.py  test_transform.py
tests/vector/usda/: test_ssurgo.py
(+11 files in other folders)
