[project]
name = "demeter"
version = "0.0.1"
authors = [
  { name = "Yard Stick", email = "software@useyardstick.com" },
]
description = "Tools for fetching spatial datasets for agriculture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3",
  "botocore",
  "dbfread",
  "defusedxml",
  "geopandas",
  "numpy",
  "pandas",
  "rtree",
  "pyproj",
  "rasterio ~= 1.4.3",
  "requests",
  "shapely",
  "smart-open",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.autoflake]
remove-all-unused-imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [".env.test"]
filterwarnings = [
  "error",
  "ignore::rasterio.errors.NotGeoreferencedWarning",
]

[[tool.mypy.overrides]]
module = [
  "dbfread.*",
  "rasterio.*",
  "shapely.*",
  "smart_open.*",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
  "geopandas.*",
]
ignore_missing_imports = true

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["."]
modules = [
  "demeter.raster",
  "demeter.raster.polaris",
  "demeter.raster.slga",
  "demeter.raster.usgs.topography",
  "demeter.raster.usgs.hydrography",
  "demeter.raster.sentinel2.ndvi",
  "demeter.raster.utils.mask",
  "demeter.raster.utils.merge",
  "demeter.raster.utils.reprojection",
]

[tool.pydoc-markdown.renderer]
type = "markdown"
filename = "docs.md"
render_toc = true
